base.css: .prose code: fix: inline text wrapping:
	+ display: inline-block;
	+ white-space: nowrap;

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -93,6 +93,8 @@
   }
   .prose code {
     @apply font-mono;
+    display: inline-block;
+    white-space: nowrap;
   }
 
   /* ===== scrollbar ===== */
